--- a/templates/threads/index.html
+++ b/templates/threads/index.html
@@ -51,7 +51,11 @@
                     {% comment %} thread image/link to more detail about post {% endcomment %}
                     <div class="thumb-content-image">
                         <a href="{% url 'threads:read_thread' thread.id %}">
+                            {% if thread.image %}
                             <img src="{{MEDIA_URL}}{{thread.image.url}}" alt="" srcset="">
+                            {% else %}
+                            <img src="{% static 'images/mario_mushroom.png' %}" alt="" srcset="">
+                            {% endif %}
                         </a>
                     </div>
 
