--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -49,8 +49,9 @@
 
                         </div>
                         <div class="thread-content-image">
-
+                            {% if read_thread.0.image %}
                             <img src="{{MEDIA_URL}}{{read_thread.0.image.url}}" alt="" srcset="" id="thread-full-image">
+                            {% endif %}
                             <div class="thread-content-text">
                                 {{read_thread.0.text}}
                             </div>
