styling / js / create thread / groups tabzzzz

--- a/templates/base.html
+++ b/templates/base.html
@@ -98,6 +98,19 @@
     <div id="loginAlert">Successful Login</div>
     {% endif %}
 
+
+
+    <div class="javascriptselectorsnull" style='display:none;'>
+        <div id="post-option-images"></div>
+        <div id="create_thread_image"></div>
+        <div id="image_input_button"></div>
+        <div id="image_input"></div>
+        <div class="reply-button"></div>
+        <div class="comment-reply-dropdown"></div>
+        <div class="report-flag"></div>
+
+    </div>
 </body>
+
 
 </html>
