--- a/static/CSS/create.css
+++ b/static/CSS/create.css
@@ -1,3 +1,11 @@
+.hidden-content {
+    visibility: hidden;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+
 .create-main-wrap {
     display: flex;
     flex-direction: row;
@@ -6,6 +14,7 @@
     padding-left: 20px;
     padding-top: 20px;
     padding-right: 20px;
+    overflow-y: scroll;
 }
 
 .create-wrap {
@@ -51,7 +60,7 @@
     flex-direction: column;
     border: 1px solid rgb(186, 184, 184);
     background-color: rgb(84, 82, 81);
-    width: 30%;
+    width: 50%;
     min-height: 50px;
     align-items: center;
     margin-bottom: 20px;
@@ -68,6 +77,10 @@
 
 }
 
+.create-group-choice:hover {
+    cursor: pointer;
+}
+
 .header-dropdown-left {
     display: flex;
     align-items: center;
@@ -75,13 +88,91 @@
 
 .header-dropdown-right {}
 
+
+/* group dropdown */
 .dropdown-wrap {
     width: 100%;
     height: 50vh;
     overflow-y: scroll;
     overflow-x: hidden;
-    display: none;
+    visibility: visible;
+    opacity: 1;
+    z-index: 10;
 }
+
+
+.group-wrap-profile {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-bottom: 1px solid rgb(186, 184, 184);
+    padding-bottom: 4px;
+    height: fit-content;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 10px;
+}
+
+#group-profiletext {
+    color: rgba(243, 244, 245, 0.583);
+    font-size: 12px;
+    font-weight: 800;
+    margin-left: 20px;
+}
+
+.group-wrap-profile-img-wrap {
+    display: flex;
+    align-items: center;
+    width: 60%;
+    height: 100%;
+
+}
+
+#group-dd-profile-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 4px 4px;
+}
+
+.group-username {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+.member-count {
+    color: rgb(15, 14, 14);
+    font-size: 13px;
+
+}
+
+.group-selection-wrap {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    margin: 7px 0;
+}
+
+.group-selection-wrap:hover {
+    background-color: rgb(136, 133, 131);
+}
+
+.group-label-wrap {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 
 .create-box-wrap {
     display: flex;
@@ -269,3 +360,6 @@
     display: flex;
     justify-content: center;
 }
+
+
+
