--- a/static/CSS/maincontent.css
+++ b/static/CSS/maincontent.css
@@ -35,7 +35,7 @@
     background-color: rgb(136, 133, 131);
     border: 1px solid rgb(186, 184, 184);
     margin-left: 10px;
-    width: 95%;
+    width: 50vw;
     height: 40px;
     margin-right: 10px;
     padding: 0;
