--- a/static/CSS/create.css
+++ b/static/CSS/create.css
@@ -74,11 +74,18 @@
     width: 100%;
     height: 100%;
     justify-content: space-between;
-
+    
 }
 
 .create-group-choice:hover {
     cursor: pointer;
+}
+
+.group-dd-profile-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 4px 4px;
 }
 
 .header-dropdown-left {
@@ -126,13 +133,6 @@
     width: 60%;
     height: 100%;
 
-}
-
-#group-dd-profile-avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin: 4px 4px;
 }
 
 .group-username {
