--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,16 @@
 {% comment %} {% load el_pagination_tags %} {% endcomment %}
 
 
-
 <html lang="en">
 
 <head>
+    {% comment %} eliminate flash of unstyled content {% endcomment %}
+    <style>
+        html {
+            visibility: hidden;
+            opacity: 0;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
