--- a/templates/threads/create_post.html
+++ b/templates/threads/create_post.html
@@ -50,7 +50,7 @@
                         <div id="group-profiletext">Your Communites</div>
 
                         {% for group in groups %}
-                        {% if group  %}
+                        {% if request.user in group.member_names %}
                         <div class="group-selection-wrap">
                             <input type="radio" name="group" id="{{group}}" class='group-radios' value='{{group.id}}'
                                 style='display:none;'>
@@ -68,8 +68,9 @@
                             </label>
                         </div>
 
-                        {% endif %}
 
+
+                        {% endif %}
                         {% endfor %}
                     </div>
                 </div>
