--- a/static/CSS/maincontent.css
+++ b/static/CSS/maincontent.css
@@ -61,20 +61,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    /* overflow-y: scroll;
+    overflow-x: hidden; */
     height: 100%;
     width: 100%;
     border: 1px solid rgb(139, 138, 138);
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    /* -ms-overflow-style: none;  /* IE and Edge */
+    /* scrollbar-width: none;   /* Firefox */
     background-color: rgb(84, 82, 81);
 }
 
 
-.thumb-post-wrap::-webkit-scrollbar {
+/* .thumb-post-wrap::-webkit-scrollbar {
     display: none;
-  }
+  } */
 
 .thumb-content {
     display: flex;
@@ -196,6 +196,5 @@
     width: 25vw;
     border: 1px solid rgb(139, 138, 138);
     background-color: rgb(84, 82, 81);
-    overflow-y: scroll;
 
 }
