--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -13,7 +13,8 @@ body {
     height: 100%;
     width: 100%;
     background-color: rgb(27, 27, 27);
-    position: fixed;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 
