--- a/templates/threads/create_post.html
+++ b/templates/threads/create_post.html
@@ -149,11 +149,13 @@
 
 
     <div class="create-sidebar-wrap">
-        <div class="sidebar-community-wrap">
+        <div class="sidebar-rules">
 
-            <div class="community-header">
-                <img src="" alt="" srcset=""> {% comment %} group image{% endcomment %}
-                p/selected community {% comment %} Community Title {% endcomment %}
+            <div class="sidebar-header">
+                <img src="" alt="" srcset="" id='sidebar-groupimg'> {% comment %} group image{% endcomment %}
+                <p id="sidebar-grouptext">
+                    {% comment %} Community Title {% endcomment %}
+                </p>
             </div>
             <div class="community-desc">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis provident tenetur natus magni, quidem
@@ -235,11 +237,6 @@
 
 
 </div>
-
-<form action="{% url 'threads:submit_thread' %}" method="post" enctype='multipart/form-data'>
-    {% csrf_token %} {{form.as_p}}
-    <input type="submit" value="">
-</form>
 
 
 
